Fix button text size on mobile devices

--- a/css/new.css
+++ b/css/new.css
@@ -241,7 +241,6 @@ img {
     }
     .emailbutton {
         width: 300px;
-        font-size: smaller;
     }
     .banner-footer {
         font-size: 1.1em;
@@ -262,7 +261,6 @@ img {
         width: 300px;
     }
     .emailbutton {
-        font-size: smaller;
         width: 280px;
     }
     .banner-footer {
